--- a/frontend/src/i18n/locales/vi/dashboard.json
+++ b/frontend/src/i18n/locales/vi/dashboard.json
@@ -73,16 +73,38 @@
     "types": {
       "leave": "Nghỉ phép",
       "overtime": "Tăng ca",
-      "correction": "Sửa công"
+      "correction": "Sửa công",
+      "remote": "Remote"
     },
     "loading": "Đang tải yêu cầu...",
     "noRequests": "Không có yêu cầu nào",
     "totalRequests": "Tổng đơn",
+    "urgency": {
+      "high": "Gấp",
+      "medium": "Bình thường",
+      "low": "Không gấp"
+    },
+    "filters": {
+      "searchPlaceholder": "Tìm theo tên nhân viên hoặc tiêu đề...",
+      "typePlaceholder": "Loại yêu cầu",
+      "allTypes": "Tất cả loại",
+      "departmentPlaceholder": "Phòng ban",
+      "allDepartments": "Tất cả phòng ban"
+    },
     "dialog": {
+      "title": "Tạo đơn yêu cầu mới",
+      "description": "Điền thông tin chi tiết cho đơn yêu cầu của bạn",
       "selectType": "Chọn loại đơn",
       "startDate": "Từ ngày",
       "endDate": "Đến ngày",
-      "reasonPlaceholder": "Nhập lý do chi tiết..."
+      "reasonPlaceholder": "Nhập lý do chi tiết...",
+      "submit": "Gửi yêu cầu",
+      "submitting": "Đang gửi..."
+    },
+    "success": {
+      "createSuccess": "Đơn yêu cầu đã được gửi!",
+      "loadError": "Không thể tải yêu cầu",
+      "createError": "Không thể gửi yêu cầu"
     },
     "errors": {
       "fillAllFields": "Vui lòng điền đầy đủ thông tin đơn yêu cầu"
@@ -284,7 +306,10 @@
     "checkOut": "Chấm công ra",
     "location": "Vị trí",
     "status": "Trạng thái",
-    "time": "Thời gian"
+    "time": "Thời gian",
+    "errors": {
+      "captureFailed": "Không thể chụp ảnh"
+    }
   },
   "history": {
     "title": "Lịch sử chấm công",
@@ -363,7 +388,31 @@
       "totalHours": "Tổng giờ",
       "performance": "Hiệu suất",
       "avgHours": "TB giờ/ngày",
-      "streak": "Chuỗi ngày"
+      "streak": "Chuỗi ngày",
+      "streakDays": "ngày",
+      "performanceMessages": {
+        "excellent": "Xuất sắc!",
+        "veryGood": "Rất tốt",
+        "good": "Tốt",
+        "needsImprovement": "Cần cải thiện"
+      },
+      "streakMessages": {
+        "keepGoing": "Giữ vững phong độ!",
+        "startNew": "Bắt đầu streak mới!"
+      }
+    },
+    "notes": {
+      "title": "Ghi chú",
+      "sample": {
+        "teamMeeting": "Họp team 9:00 AM",
+        "codeReview": "Code review 2:00 PM",
+        "submitReport": "Submit report 5:00 PM"
+      }
+    },
+    "defaults": {
+      "location": "Văn phòng chính",
+      "team": "Dev Team",
+      "shiftName": "Full time"
     },
     "todayShift": "Ca làm hôm nay",
     "timeRemaining": "Còn",
@@ -835,7 +884,8 @@
       "phone": "Số điện thoại",
       "createdAt": "Ngày tạo",
       "status": "Trạng thái",
-      "close": "Đóng"
+      "close": "Đóng",
+      "notAvailable": "N/A"
     },
     "editDialog": {
       "title": "Chỉnh sửa thông tin nhân viên",
@@ -847,6 +897,7 @@
       "phone": "Số điện thoại",
       "department": "Phòng ban",
       "selectDepartment": "Chọn phòng ban",
+      "noDepartment": "N/A",
       "role": "Vai trò",
       "selectRole": "Chọn vai trò",
       "accountStatus": "Trạng thái tài khoản",
@@ -855,6 +906,11 @@
       "inactiveWarning": "⚠️ Nhân viên sẽ không thể đăng nhập khi tài khoản bị vô hiệu hóa",
       "cancel": "Hủy",
       "update": "Cập nhật"
+    },
+    "form": {
+      "namePlaceholder": "Nhập họ và tên",
+      "emailPlaceholder": "Nhập email",
+      "phonePlaceholder": "Nhập số điện thoại"
     },
     "deleteDialog": {
       "title": "Xác nhận vô hiệu hóa nhân viên",
@@ -867,10 +923,22 @@
       "active": "Hoạt động",
       "inactive": "Ngừng"
     },
+    "validation": {
+      "nameRequired": "Vui lòng nhập họ và tên",
+      "nameMinLength": "Họ và tên phải có ít nhất 2 ký tự",
+      "emailRequired": "Vui lòng nhập email",
+      "emailInvalid": "Email không hợp lệ",
+      "roleRequired": "Vui lòng chọn vai trò",
+      "phoneInvalid": "Số điện thoại không hợp lệ (10-11 chữ số)",
+      "checkInfo": "Vui lòng kiểm tra lại thông tin"
+    },
     "errors": {
+      "noPermission": "Bạn không có quyền thực hiện thao tác này",
       "loadFailed": "Không thể tải danh sách nhân viên",
       "loadDepartmentsFailed": "Không thể tải danh sách phòng ban",
-      "loadUserFailed": "Không thể tải thông tin nhân viên"
+      "loadUserFailed": "Không thể tải thông tin nhân viên",
+      "disableError": "Không thể vô hiệu hóa nhân viên",
+      "updateError": "Không thể cập nhật thông tin nhân viên"
     },
     "success": {
       "updateSuccess": "Cập nhật thông tin nhân viên thành công!",
@@ -989,17 +1057,23 @@
     },
     "status": {
       "completed": "Hoàn thành",
-      "pending": "Chờ phê duyệt",
+      "pending": "Chờ đánh giá",
       "draft": "Nháp",
-      "rejected": "Từ chối"
+      "rejected": "Bị từ chối"
     },
     "actions": {
       "create": "Tạo đánh giá",
+      "createAndSend": "Tạo và gửi đánh giá hiệu suất cho nhân viên",
       "edit": "Sửa",
       "view": "Xem",
       "approve": "Phê duyệt",
       "reject": "Từ chối",
-      "export": "Xuất báo cáo"
+      "export": "Xuất báo cáo",
+      "submit": "Gửi đánh giá",
+      "waitingApproval": "Chờ phê duyệt",
+      "saving": "Đang lưu...",
+      "update": "Cập nhật",
+      "createNew": "Tạo mới"
     },
     "dialog": {
       "viewTitle": "Chi tiết đánh giá",
@@ -1011,13 +1085,20 @@
       "overallScore": "Điểm tổng",
       "notes": "Ghi chú",
       "notesPlaceholder": "Ghi chú hoặc nhận xét cho đánh giá này...",
+      "generalNotesPlaceholder": "Nhập nhận xét chung...",
       "rejectReason": "Lý do từ chối",
       "rejectPlaceholder": "Nhập lý do từ chối...",
+      "rejectPrompt": "Nhập lý do reject:",
       "save": "Lưu đánh giá",
       "cancel": "Hủy",
       "close": "Đóng",
       "reject": "Từ chối",
       "approve": "Phê duyệt"
+    },
+    "success": {
+      "updateSuccess": "Cập nhật đánh giá thành công",
+      "createSuccess": "Tạo đánh giá thành công",
+      "rejectSuccess": "Đã reject đánh giá"
     },
     "errors": {
       "loadReviews": "Lỗi khi tải danh sách đánh giá",
@@ -1042,12 +1123,22 @@
       "name": "Tên chi nhánh",
       "namePlaceholder": "VD: Chi nhánh Hà Nội",
       "code": "Mã chi nhánh",
-      "codePlaceholder": "VD: HN001",
+      "codePlaceholder": "VD: HN",
+      "latitude": "Vĩ độ (Latitude)",
+      "latitudePlaceholder": "Ví dụ: 21.0285",
+      "longitude": "Kinh độ (Longitude)",
+      "longitudePlaceholder": "Ví dụ: 105.8542",
       "city": "Thành phố",
+      "cityPlaceholder": "Ví dụ: Hà Nội",
       "country": "Quốc gia",
+      "countryPlaceholder": "Việt Nam",
       "phone": "Số điện thoại",
       "email": "Email",
       "manager": "Quản lý chi nhánh",
+      "status": {
+        "active": "Đang hoạt động",
+        "inactive": "Ngừng hoạt động"
+      },
       "selectManager": "Chọn quản lý",
       "status": "Trạng thái",
       "active": "Hoạt động",
@@ -1137,6 +1228,7 @@
       "addTitle": "Thêm phòng ban mới",
       "editTitle": "Chỉnh sửa phòng ban",
       "name": "Tên phòng ban",
+      "code": "Mã phòng ban",
       "description": "Mô tả",
       "descriptionPlaceholder": "Mô tả về phòng ban...",
       "branch": "Chi nhánh",
@@ -1174,7 +1266,9 @@
     "title": "Báo cáo & Thống kê",
     "description": "Phân tích chi tiết chấm công",
     "export": "Xuất báo cáo",
+    "exportLoading": "📥 Đang xuất báo cáo...",
     "exportSuccess": "Xuất báo cáo thành công!",
+    "exportError": "Xuất báo cáo thất bại",
     "timeRange": {
       "week": "Tuần này",
       "month": "Tháng này",
@@ -1190,9 +1284,12 @@
     "charts": {
       "trend": "Xu hướng 6 tháng",
       "department": "Phân bổ theo phòng ban",
+      "departmentDistribution": "Phân bổ theo phòng ban",
       "overtime": "Thống kê tăng ca",
+      "overtimeStats": "Thống kê tăng ca",
       "overtimeHours": "Giờ tăng ca",
       "topPerformers": "Nhân viên xuất sắc",
+      "topEmployees": "Nhân viên xuất sắc",
       "attendanceRate": "Tỷ lệ chấm công"
     },
     "departmentDetailsTitle": "Chi tiết phòng ban",
@@ -1376,92 +1473,6 @@
       "saveFailed": "Không thể lưu dữ liệu",
       "deleteFailed": "Không thể xóa",
       "updateFailed": "Không thể cập nhật"
-    }
-  },
-  "employeeManagement": {
-    "title": "Quản lý nhân viên",
-    "searchPlaceholder": "Tìm kiếm nhân viên...",
-    "filterByRole": "Lọc theo vai trò",
-    "filterByStatus": "Lọc theo trạng thái",
-    "allRoles": "Tất cả vai trò",
-    "allStatus": "Tất cả trạng thái",
-    "active": "Hoạt động",
-    "inactive": "Không hoạt động",
-    "stats": {
-      "total": "Tổng nhân viên",
-      "active": "Đang hoạt động",
-      "admin": "Quản trị viên",
-      "newThisMonth": "Mới tháng này"
-    },
-    "table": {
-      "title": "Danh sách nhân viên",
-      "employee": "Nhân viên",
-      "email": "Email",
-      "department": "Phòng ban",
-      "role": "Vai trò",
-      "status": "Trạng thái",
-      "actions": "Thao tác",
-      "loading": "Đang tải...",
-      "noEmployees": "Không có nhân viên nào",
-      "viewDetails": "Xem chi tiết",
-      "edit": "Chỉnh sửa",
-      "disable": "Vô hiệu hóa"
-    },
-    "status": {
-      "active": "Hoạt động",
-      "inactive": "Ngừng hoạt động"
-    },
-    "pagination": {
-      "showing": "Hiển thị",
-      "of": "của",
-      "rowsPerPage": "Số dòng:",
-      "page": "Trang"
-    },
-    "viewDialog": {
-      "title": "Chi tiết nhân viên",
-      "description": "Thông tin chi tiết về nhân viên",
-      "id": "ID:",
-      "email": "Email",
-      "department": "Phòng ban",
-      "role": "Vai trò",
-      "status": "Trạng thái",
-      "createdAt": "Ngày tạo",
-      "close": "Đóng"
-    },
-    "editDialog": {
-      "title": "Chỉnh sửa nhân viên",
-      "description": "Cập nhật thông tin nhân viên",
-      "name": "Họ và tên",
-      "email": "Email",
-      "department": "Phòng ban",
-      "selectDepartment": "Chọn phòng ban",
-      "role": "Vai trò",
-      "selectRole": "Chọn vai trò",
-      "cancel": "Hủy",
-      "save": "Lưu thay đổi"
-    },
-    "deleteDialog": {
-      "title": "Xác nhận vô hiệu hóa",
-      "description": "Bạn có chắc chắn muốn vô hiệu hóa nhân viên này?",
-      "warning": "Hành động này sẽ vô hiệu hóa tài khoản nhân viên. Họ sẽ không thể đăng nhập vào hệ thống.",
-      "cancel": "Hủy",
-      "confirm": "Vô hiệu hóa"
-    },
-    "validation": {
-      "nameRequired": "Vui lòng nhập họ và tên",
-      "emailRequired": "Vui lòng nhập email",
-      "roleRequired": "Vui lòng chọn vai trò",
-      "checkInfo": "Vui lòng kiểm tra lại thông tin"
-    },
-    "errors": {
-      "noPermission": "Bạn không có quyền thực hiện thao tác này",
-      "loadFailed": "Không thể tải danh sách nhân viên",
-      "loadDepartmentsFailed": "Không thể tải danh sách phòng ban",
-      "loadUserFailed": "Không thể tải thông tin nhân viên"
-    },
-    "success": {
-      "updateSuccess": "Cập nhật thông tin nhân viên thành công!",
-      "disableSuccess": "Vô hiệu hóa nhân viên thành công!"
     }
   },
   "notificationCenter": {
