--- a/frontend/src/i18n/locales/vi/dashboard.json
+++ b/frontend/src/i18n/locales/vi/dashboard.json
@@ -502,7 +502,14 @@
     "deleteConfirm": "Bạn có chắc chắn muốn xóa sự kiện",
     "deleteSuccess": "Xóa sự kiện thành công!",
     "deleteError": "Không thể xóa sự kiện",
-    "loadError": "Không thể tải dữ liệu sự kiện"
+    "loadError": "Không thể tải dữ liệu sự kiện",
+    "deleteDialog": {
+      "title": "Xóa sự kiện",
+      "description": "Bạn có chắc chắn muốn xóa sự kiện này không? Hành động này không thể hoàn tác.",
+      "cancel": "Hủy",
+      "confirm": "Xóa",
+      "warning": "Hành động này sẽ xóa vĩnh viễn sự kiện khỏi hệ thống."
+    }
   },
   "leaveBalance": {
     "title": "Số ngày phép",
