--- a/frontend/src/i18n/locales/en/auth.json
+++ b/frontend/src/i18n/locales/en/auth.json
@@ -13,7 +13,12 @@
     "noAccount": "Don't have an account?",
     "register": "Register now",
     "success": "Login successful",
-    "error": "Login failed"
+    "error": "Login failed",
+    "emailRequired": "Email is required",
+    "emailInvalid": "Invalid email",
+    "passwordRequired": "Password is required",
+    "formValidationError": "Please check your input information",
+    "backToHome": "Back to home"
   },
   "register": {
     "title": "Register Account",
@@ -44,7 +49,17 @@
     "passwordsNotMatch": "Passwords do not match!",
     "agreeTermsRequired": "Please agree to the terms and conditions",
     "success": "Registration successful! Please check your email to verify OTP.",
-    "error": "Registration failed"
+    "error": "Registration failed",
+    "fullNameRequired": "Full name is required",
+    "emailRequired": "Email is required",
+    "passwordRequired": "Password is required",
+    "confirmPasswordRequired": "Please confirm your password",
+    "fullNameMaxLength": "Full name must not exceed 100 characters",
+    "passwordMinLength": "Password must be at least 8 characters",
+    "passwordHasUpperCase": "Password must contain at least 1 uppercase letter",
+    "passwordHasLowerCase": "Password must contain at least 1 lowercase letter",
+    "passwordHasNumber": "Password must contain at least 1 number",
+    "formValidationError": "Please check your input information"
   },
   "forgotPassword": {
     "title": "Forgot Password",
@@ -58,7 +73,10 @@
     "loginNow": "Login now",
     "success": "OTP code has been sent to your email",
     "error": "Failed to send OTP code",
-    "genericError": "An error occurred. Please try again."
+    "genericError": "An error occurred. Please try again.",
+    "emailRequired": "Email is required",
+    "emailInvalid": "Invalid email",
+    "formValidationError": "Please check your input information"
   },
   "resetPassword": {
     "title": "Reset Password",
@@ -79,7 +97,15 @@
     "success": "Password reset successful",
     "error": "Password reset failed",
     "passwordsNotMatch": "Passwords do not match!",
-    "genericError": "An error occurred. Please try again."
+    "genericError": "An error occurred. Please try again.",
+    "passwordRequired": "Password is required",
+    "passwordMinLength": "Password must be at least 8 characters",
+    "passwordHasUpperCase": "Password must contain at least 1 uppercase letter",
+    "passwordHasLowerCase": "Password must contain at least 1 lowercase letter",
+    "passwordHasNumber": "Password must contain at least 1 number",
+    "passwordHasSpecialChar": "Password must contain at least 1 special character",
+    "confirmPasswordRequired": "Please confirm your password",
+    "formValidationError": "Please check your input information"
   },
   "verifyOtp": {
     "title": "Verify OTP",
@@ -101,7 +127,11 @@
     "error": "Invalid OTP code",
     "verifyError": "Verification failed",
     "resendError": "Failed to resend OTP",
-    "resendSuccess": "OTP has been resent."
+    "resendSuccess": "OTP has been resent.",
+    "otpRequired": "OTP code is required",
+    "otpInvalid": "Invalid OTP code",
+    "otpLengthError": "OTP code must be 6 digits",
+    "otpDigitsOnly": "OTP code must contain only numbers"
   }
 }
 
