--- a/frontend/src/i18n/locales/vi/auth.json
+++ b/frontend/src/i18n/locales/vi/auth.json
@@ -13,7 +13,12 @@
     "noAccount": "Chưa có tài khoản?",
     "register": "Đăng ký ngay",
     "success": "Đăng nhập thành công",
-    "error": "Đăng nhập thất bại"
+    "error": "Đăng nhập thất bại",
+    "emailRequired": "Email là bắt buộc",
+    "emailInvalid": "Email không hợp lệ",
+    "passwordRequired": "Mật khẩu là bắt buộc",
+    "formValidationError": "Vui lòng kiểm tra lại thông tin đã nhập",
+    "backToHome": "Quay lại trang chủ"
   },
   "register": {
     "title": "Đăng ký tài khoản",
@@ -44,7 +49,17 @@
     "passwordsNotMatch": "Mật khẩu không khớp!",
     "agreeTermsRequired": "Vui lòng đồng ý với điều khoản sử dụng",
     "success": "Đăng ký thành công! Vui lòng kiểm tra email để xác thực OTP.",
-    "error": "Đăng ký thất bại"
+    "error": "Đăng ký thất bại",
+    "fullNameRequired": "Họ tên là bắt buộc",
+    "emailRequired": "Email là bắt buộc",
+    "passwordRequired": "Mật khẩu là bắt buộc",
+    "confirmPasswordRequired": "Vui lòng xác nhận mật khẩu",
+    "fullNameMaxLength": "Họ tên không được vượt quá 100 ký tự",
+    "passwordMinLength": "Mật khẩu phải có ít nhất 8 ký tự",
+    "passwordHasUpperCase": "Mật khẩu phải có ít nhất 1 chữ hoa",
+    "passwordHasLowerCase": "Mật khẩu phải có ít nhất 1 chữ thường",
+    "passwordHasNumber": "Mật khẩu phải có ít nhất 1 số",
+    "formValidationError": "Vui lòng kiểm tra lại thông tin đã nhập"
   },
   "forgotPassword": {
     "title": "Quên mật khẩu",
@@ -58,7 +73,10 @@
     "loginNow": "Đăng nhập ngay",
     "success": "Mã OTP đã được gửi đến email của bạn",
     "error": "Không thể gửi mã OTP",
-    "genericError": "Có lỗi xảy ra. Vui lòng thử lại."
+    "genericError": "Có lỗi xảy ra. Vui lòng thử lại.",
+    "emailRequired": "Email là bắt buộc",
+    "emailInvalid": "Email không hợp lệ",
+    "formValidationError": "Vui lòng kiểm tra lại thông tin đã nhập"
   },
   "resetPassword": {
     "title": "Đặt lại mật khẩu",
@@ -79,7 +97,15 @@
     "success": "Đặt lại mật khẩu thành công",
     "error": "Đặt lại mật khẩu thất bại",
     "passwordsNotMatch": "Mật khẩu không khớp!",
-    "genericError": "Có lỗi xảy ra. Vui lòng thử lại."
+    "genericError": "Có lỗi xảy ra. Vui lòng thử lại.",
+    "passwordRequired": "Mật khẩu là bắt buộc",
+    "passwordMinLength": "Mật khẩu phải có ít nhất 8 ký tự",
+    "passwordHasUpperCase": "Mật khẩu phải có ít nhất 1 chữ hoa",
+    "passwordHasLowerCase": "Mật khẩu phải có ít nhất 1 chữ thường",
+    "passwordHasNumber": "Mật khẩu phải có ít nhất 1 số",
+    "passwordHasSpecialChar": "Mật khẩu phải có ít nhất 1 ký tự đặc biệt",
+    "confirmPasswordRequired": "Vui lòng xác nhận mật khẩu",
+    "formValidationError": "Vui lòng kiểm tra lại thông tin đã nhập"
   },
   "verifyOtp": {
     "title": "Xác thực OTP",
@@ -101,7 +127,11 @@
     "error": "Mã OTP không hợp lệ",
     "verifyError": "Xác thực thất bại",
     "resendError": "Gửi lại OTP thất bại",
-    "resendSuccess": "OTP đã được gửi lại."
+    "resendSuccess": "OTP đã được gửi lại.",
+    "otpRequired": "Mã OTP là bắt buộc",
+    "otpInvalid": "Mã OTP không hợp lệ",
+    "otpLengthError": "Mã OTP phải có 6 chữ số",
+    "otpDigitsOnly": "Mã OTP chỉ được chứa số"
   }
 }
 
