Enhance user avatar handling and improve dashboard month stats display. Update avatar URL retrieval logic to prioritize secure links and add error handling. Refactor Profile component to ensure HTTPS for avatar images. Revamp SchedulePage to focus on monthly statistics, replacing the upcoming shifts section with month progress metrics and improving layout consistency.

--- a/frontend/src/i18n/locales/en/dashboard.json
+++ b/frontend/src/i18n/locales/en/dashboard.json
@@ -381,6 +381,7 @@
     "shift": "shift",
     "error": "Error loading shifts:",
     "timeRange": "Working hours",
+    "timeRangeMonth": "This month",
     "legend": {
       "done": "Done",
       "today": "Today",
