Enhance logging and user management features
- Added support for 'warning' status in logs to detect suspicious activities.
- Implemented a new method to determine log status based on actions and context.
- Introduced a test function for verifying warning detection logic.
- Updated user model and controller to include 'taxId' field.
- Created a new endpoint for admins to create users with validation.
- Enhanced frontend components for user management, including form validation and bank selection.
- Updated translations for new user creation features.

--- a/frontend/src/i18n/locales/en/dashboard.json
+++ b/frontend/src/i18n/locales/en/dashboard.json
@@ -1388,6 +1388,20 @@
     "success": {
       "updateSuccess": "Employee information updated successfully!",
       "disableSuccess": "Employee disabled successfully!"
+    },
+    "createUser": {
+      "button": "Create Account",
+      "title": "Create New Account",
+      "description": "Enter information to create a new employee account",
+      "password": "Password",
+      "passwordPlaceholder": "Enter password",
+      "create": "Create Account",
+      "success": "Account created successfully!",
+      "error": "Failed to create account",
+      "validation": {
+        "passwordRequired": "Password is required",
+        "passwordMinLength": "Password must be at least 6 characters long"
+      }
     }
   },
   "auditLogs": {
