Add Supervisor role and enhance related functionalities
- Introduced a new user role 'SUPERVISOR' to manage teams within departments.
- Updated user model and role hierarchy to include the Supervisor role.
- Enhanced attendance and request management to restrict access based on department for Supervisors.
- Modified dashboard and analytics features to filter data according to the Supervisor's department.
- Updated frontend components to support Supervisor functionalities, including department-specific views and permissions.
- Adjusted routing and role requirements to accommodate the new Supervisor role across various modules.

--- a/frontend/src/i18n/locales/en/common.json
+++ b/frontend/src/i18n/locales/en/common.json
@@ -82,7 +82,9 @@
       "admin": "Administration",
       "employee": "Personal",
       "system": "System"
-    }
+    },
+    "expand_sidebar": "Expand Sidebar",
+    "collapse_sidebar": "Collapse Sidebar"
   }
 }
 
