Update attendance system terminology and descriptions
- Replaced references to "QR code" with "photo" in various components and metadata to reflect new functionality.
- Updated text in the LandingPage and AuthLayout components for clarity and consistency.
- Modified localization files to change "scan QR" to "scan photo" for both English and Vietnamese versions, ensuring accurate user instructions.

--- a/frontend/src/i18n/locales/en/dashboard.json
+++ b/frontend/src/i18n/locales/en/dashboard.json
@@ -155,11 +155,11 @@
       "completed": "You have completed your check-in",
       "notCheckedOut": "Not checked out yet. Remember to check out when your shift ends.",
       "notCheckedIn": "Not checked in today",
-      "scanQR": "Scan QR code at the office to check in",
-      "scanQRButton": "Scan QR to Check In",
+      "scanPhoto": "Scan photo at the office to check in",
+      "scanPhotoButton": "Scan photo to Check In",
       "working": "Currently Working",
       "workingTime": "Working Time",
-      "checkOut": "Check Out",
+      "checkOut": "Check-out",
       "thankYou": "Thank You!",
       "seeYouTomorrow": "Have a great evening and see you tomorrow!",
       "totalTime": "Total Time"
