--- a/frontend/src/i18n/locales/vi/dashboard.json
+++ b/frontend/src/i18n/locales/vi/dashboard.json
@@ -273,11 +273,11 @@
       "completed": "Bạn đã hoàn thành chấm công",
       "notCheckedOut": "Chưa check-out. Nhớ check-out khi kết thúc ca làm việc.",
       "notCheckedIn": "Chưa chấm công hôm nay",
-      "scanQR": "Quét mã QR tại văn phòng để điểm danh",
-      "scanQRButton": "Quét QR điểm danh",
+      "scanPhoto": "Quét ảnh tại văn phòng để check-in",
+      "scanPhotoButton": "Quét ảnh check-in",
       "working": "Đang làm việc",
       "workingTime": "Thời gian làm việc",
-      "checkOut": "Check Out",
+      "checkOut": "Check-out",
       "thankYou": "Cảm ơn bạn!",
       "seeYouTomorrow": "Chúc bạn buổi tối vui vẻ và hẹn gặp lại ngày mai!",
       "totalTime": "Tổng thời gian"
